# AdressBookConsole

./: Dockerfile  ab_console12.py  abc_classes.py  app.py  asistent.py  assistent.py  classes.py  country_phone_dict.py  pyproject.toml  setup.py  start.py
ab_console/: ab_console.py  start.py
ab_console/web/: aio.py
project_ab/: pyproject.toml
