[tool.poetry]
name = "ab_console"
version = "0.1.0"
description = "Mijn cursusproject GoIT Python Core"
authors = ["Oleksandr Pripa <ol.pripa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/olpripa/AdressBookConsole"